fixed footer made it stuck at the bottom

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -7,7 +7,6 @@
   width: 100%;
   padding: 0px 50px;
   color: rgb(200, 200, 200);
-  position: fixed;
   bottom: 0;
 }
 
